<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/vpn_type"/>
    <Spinner
        android:id="@+id/vpn_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/vpn_types"
        android:prompt="@string/vpn_type" />
    <EditText
        android:id="@+id/vpn_servip"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/vpn_servip"/>
    <EditText
        android:id="@+id/vpn_servgroupid"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/vpn_servgroupid" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="4dip"
        android:layout_marginTop="4dip"
        android:background="@android:drawable/divider_horizontal_dark"
        android:focusable="false" />

    <EditText
        android:id="@+id/vpn_servgrouppass"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/vpn_servgrouppass"/>
    <EditText
        android:id="@+id/vpn_username"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/vpn_username"/>
    <EditText
        android:id="@+id/vpn_userpass"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/vpn_userpass"/>
    <CheckBox
        android:id="@+id/vpn_showpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/vpn_showpass"
        android:layout_marginRight="4dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="4dip"
        android:layout_marginTop="4dip"
        android:background="@android:drawable/divider_horizontal_dark"
        android:focusable="false" />
    <CheckBox
        android:id="@+id/vpn_autorecon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/vpn_autorecon"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"/>
    <CheckBox
        android:id="@+id/vpn_savepass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/vpn_savepass"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="6dp"/>
</LinearLayout>