<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/vpn_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/vpn_state"/>
    <TextView
        android:id="@+id/vpn_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/vpn_sent"/>
    <TextView
        android:id="@+id/vpn_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/vpn_received"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginBottom="4dip"
        android:layout_marginTop="4dip"
        android:background="@android:drawable/divider_horizontal_dark"
        android:focusable="false" />
</LinearLayout>